CommentNode: fix visual glitches
* Empty CommentNode wasn't a labelElement, so the formatting was confusing during initial insertion
* Icon was a bit misaligned, particularly visible when the highlight was present
* Inspector had the "remove" button misaligned.

Bug: T190658

--- a/src/ce/styles/nodes/ve.ce.CommentNode.css
+++ b/src/ce/styles/nodes/ve.ce.CommentNode.css
@@ -22,4 +22,5 @@
 }
 .ve-ce-commentNode > .ve-ce-focusableNode-invisibleIcon.oo-ui-iconElement .oo-ui-iconElement-icon {
 	height: auto;
+	bottom: 0;
 }
